bpo-45738: Fix computation of error location for invalid continuation (GH-29550)

characters in the parser